#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([ladubug], [0.4.0], [kapamaroo@gmail.com])
AC_CONFIG_SRCDIR([src/bison.y])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([no-define])

# Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AC_PROG_LEX
# AC_PROG_AWK
# AC_PROG_INSTALL
# AC_PROG_CPP
# AC_PROG_MKDIR_P

# Checks for libraries.

# Checks for header files.
AC_FUNC_ALLOCA
AC_CHECK_HEADERS([libintl.h malloc.h stddef.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset strdup])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
